--- a/audio-player/assets/css/style.css
+++ b/audio-player/assets/css/style.css
@@ -109,14 +109,26 @@ input[placeholder] {
     align-items: center;
     justify-content: center;
     flex: 1 0 auto;
+    background-image: url(../img/dontstartnow.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .player {
-    height: 100px;
-    background-color: aqua;
+    max-width: 500px;
+    width: 100%;
+    min-height: 300px;
+    padding: 20px;
+    border: 2px solid #19780f;
+    border-radius: 6px;
+    background-color: #000;
+    box-shadow: 0 0 20px 2px #19780f;
 }
 
 .footer {
     height: 100px;
-    background-color: red;
+    border-top: 2px solid #19780f;
+    background-color: #000;
+    box-shadow: 0 0 20px 2px #19780f;
 }
