--- a/audio-player/assets/css/style.css
+++ b/audio-player/assets/css/style.css
@@ -97,6 +97,13 @@ input[placeholder] {
     white-space: nowrap;
 }
 
+.btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: transparent;
+}
+
 .site-wrapper {
     display: flex;
     flex-direction: column;
@@ -104,26 +111,78 @@ input[placeholder] {
     margin: 0 auto;
 }
 
+.container {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
 .main {
     display: flex;
     align-items: center;
     justify-content: center;
     flex: 1 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
     background-image: url(../img/dontstartnow.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 
 .player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     max-width: 500px;
     width: 100%;
     min-height: 300px;
     padding: 20px;
     border: 2px solid #19780f;
-    border-radius: 6px;
+    border-radius: 14px;
     background-color: #000;
     box-shadow: 0 0 20px 2px #19780f;
+    position: relative;
+    z-index: 1;
+}
+
+.player__music-img {
+    width: 100%;
+    height: 400px;
+    border-radius: 14px;
+    object-fit: cover;
+}
+
+.player__music-controls {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.player__control-btn {
+    padding: 15px;
+    border-radius: 50%;
+    color: #000;
+    background-color: #fff;
+    transition: all .3s ease-in-out;
+}
+
+.player__control-btn:hover {
+    color: #19780f;
+    box-shadow: 0 0 10px 2px #19780f;
 }
 
 .footer {
