--- a/audio-player/assets/css/style.css
+++ b/audio-player/assets/css/style.css
@@ -125,7 +125,8 @@ input[placeholder] {
     left: 0;
     bottom: 0;
     z-index: 0;
-    background-color: rgba(0, 0, 0, 0.6);
+    background: linear-gradient(45deg, #000, 30%, #46b163, 40%, #000, 70%, #46b163, 80%, #000);
+    opacity: 0.5;
 }
 
 .main {
@@ -183,11 +184,4 @@ input[placeholder] {
 .player__control-btn:hover {
     color: #19780f;
     box-shadow: 0 0 10px 2px #19780f;
-}
-
-.footer {
-    height: 100px;
-    border-top: 2px solid #19780f;
-    background-color: #000;
-    box-shadow: 0 0 20px 2px #19780f;
 }
