--- a/audio-player/assets/css/style.css
+++ b/audio-player/assets/css/style.css
@@ -1,68 +1,73 @@
+:root {
+  --main-color: #19780f;
+  --main-color-opacity: #46b163;
+}
+
 html {
-    text-rendering: optimizeLegibility;
-    box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-weight: 400;
-    line-height: 1.2;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  line-height: 1.2;
 }
 
 button,
 input,
 select,
 textarea {
-    font-size: 1.4px;
-    outline: none;
+  font-size: 1.4px;
+  outline: none;
 }
 
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 img {
-    font-size: 1.4px;
+  font-size: 1.4px;
 }
 
 img,
 video {
-    height: 100%;
-    max-width: 100%;
+  height: 100%;
+  max-width: 100%;
 }
 
 picture {
-    display: flex;
+  display: flex;
 }
 
 label {
-    cursor: pointer;
-    user-select: none;
+  cursor: pointer;
+  user-select: none;
 }
 
 textarea {
-    resize: vertical;
+  resize: vertical;
 }
 
 a {
-    text-decoration: none;
-    cursor: pointer;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
@@ -88,100 +93,170 @@ p,
 pre,
 textarea,
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 input[placeholder] {
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    outline: transparent;
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: transparent;
 }
 
 .site-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0 auto;
 }
 
 .container {
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 0;
-    background: linear-gradient(45deg, #000, 30%, #46b163, 40%, #000, 70%, #46b163, 80%, #000);
-    opacity: 0.5;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 0;
+  background: linear-gradient(
+    45deg,
+    #000,
+    30%,
+    var(--main-color-opacity),
+    40%,
+    #000,
+    70%,
+    var(--main-color-opacity),
+    80%,
+    #000
+  );
+  opacity: 0.5;
 }
 
 .main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: 1 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    background-image: url(../img/dontstartnow.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1 0 auto;
+  padding: 20px;
+  background-image: url(../img/dontstartnow.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
 .player {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    max-width: 500px;
-    width: 100%;
-    min-height: 300px;
-    padding: 20px;
-    border: 2px solid #19780f;
-    border-radius: 14px;
-    background-color: #000;
-    box-shadow: 0 0 20px 2px #19780f;
-    position: relative;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  max-width: 500px;
+  width: 100%;
+  min-height: 300px;
+  padding: 20px;
+  border: 2px solid var(--main-color);
+  border-radius: 14px;
+  background-color: #000;
+  box-shadow: 0 0 20px 2px var(--main-color);
+  position: relative;
+  z-index: 1;
 }
 
 .player__music-img {
-    width: 100%;
-    height: 400px;
-    border-radius: 14px;
-    object-fit: cover;
+  width: 100%;
+  max-height: 30vh;
+  border-radius: 14px;
+  object-fit: cover;
+}
+
+.player__music-info {
+  width: 100%;
+  text-align: center;
+}
+
+.player__music-executor {
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--main-color-opacity);
+}
+
+.player__music-name {
+  font-size: 20px;
+  color: #82b7b5;
 }
 
 .player__music-controls {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .player__control-btn {
-    padding: 15px;
-    border-radius: 50%;
-    color: #000;
-    background-color: #fff;
-    transition: all .3s ease-in-out;
+  padding: 15px;
+  border-radius: 50%;
+  color: #000;
+  background-color: #82b7b5;
+  transition: all 0.3s ease-in-out;
 }
 
 .player__control-btn:hover {
-    color: #19780f;
-    box-shadow: 0 0 10px 2px #19780f;
+  box-shadow: 0 0 10px 2px #82b7b5;
+}
+
+.player__time {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  color: #fff;
+}
+
+.player__time-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.player__time-begin {
+  font-weight: 600;
+  color: #82b7b5;
+}
+
+.player__time-end {
+  font-weight: 600;
+  color: #82b7b5;
+}
+
+.player__time-line {
+}
+
+.player__time-line-slider {
+  height: 20px;
+  width: 100%;
+  border-radius: 6px;
+  cursor: pointer;
+  background: var(--main-color);
+  -webkit-appearance: none;
+}
+
+.player__time-line-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 16px;
+  height: 30px;
+  border-radius: 21%;
+  background-color: #82b7b5;
 }
